--- a/Part 3.3.2 Test.ipynb
+++ b/Part 3.3.2 Test.ipynb
@@ -594,23 +594,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "id": "3b433a89-0595-4ab0-8ed2-5f3ff3973e9e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "G_WP_015925729_1"
+       "R_FNRR3: M_fdxo_2_2_c + M_h2_c <-> M_fdxrd_c + 2.0 M_h_c"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.reactions.R_FNRR3.gpr"
+    "model.reactions.R_FNRR3"
    ]
   },
   {
