--- a/notebooks/Part 2.3.1. Curation of model - Transport and catabolism of galactokinase.ipynb
+++ b/notebooks/Part 2.3.1. Curation of model - Transport and catabolism of galactokinase.ipynb
@@ -924,6 +924,7 @@
    "cell_type": "markdown",
    "id": "ccd085e8-da18-48a4-aa9a-1f2df9dda7f5",
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     },
@@ -2194,7 +2195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
