--- a/notebooks/Step 3 - Manual pathway curation.ipynb
+++ b/notebooks/Step 3 - Manual pathway curation.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reframed import load_cbmodel, save_cbmodel, Protein, GPRAssociation\n",
+    "from reframed import load_cbmodel, save_cbmodel, Protein, GPRAssociation, simplify, Environment\n",
     "from reframed.io.sbml import parse_gpr_rule\n",
     "from copy import deepcopy"
    ]
@@ -185,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/daniel/mambaforge/envs/carve/lib/python3.9/site-packages/reframed/core/model.py:471: UserWarning: No such reaction R_ARBabcpp\n",
+      "/Volumes/Daniel/git/reframed/reframed/core/model.py:471: UserWarning: No such reaction R_ARBabcpp\n",
       "  warn(f\"No such reaction {r_id}\")\n"
      ]
     }
@@ -273,6 +273,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff173a41-6bb9-437c-b900-21b1613cbd70",
+   "metadata": {},
+   "source": [
+    "## Remove blocked reactions and orphaned genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c21dfb4d-07a1-427a-8729-891d45afaf5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Environment.complete(model, inplace=True)\n",
+    "simplify(model, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "90dafe74-cf5c-4cad-bffe-3b86f8551f8a",
    "metadata": {},
    "source": [
@@ -281,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "67d76c0c-5b8f-4bcd-8ec2-ae8cb147b9c2",
    "metadata": {},
    "outputs": [],
