--- a/notebooks/Part 4.2. Test.ipynb
+++ b/notebooks/Part 4.2. Test.ipynb
@@ -50,14 +50,10 @@
    },
    "outputs": [],
    "source": [
-    "import reframed\n",
     "from reframed import pFBA, Environment, FVA,FBA\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from collections import OrderedDict \n",
-    "import warnings\n",
-    "plt.rcdefaults()"
+    "import numpy as np"
    ]
   },
   {
@@ -1994,7 +1990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
