fixed all gene knockouts

--- a/notebooks/Step 2 - Lignocellulose degradation.ipynb
+++ b/notebooks/Step 2 - Lignocellulose degradation.ipynb
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "metabolites = pd.read_excel('../input/Polysaccharide degrading pathways.xlsx', sheet_name=\"Mets. arabinoxylan\", usecols=\"A:E\").dropna()\n",
-    "reactions = pd.read_excel('../input//Polysaccharide degrading pathways.xlsx', sheet_name=\"Rxns. Cat. of ara.xyl oligosac\", usecols=\"A:F\").dropna()\n",
+    "reactions = pd.read_excel('../input/Polysaccharide degrading pathways.xlsx', sheet_name=\"Rxns. Cat. of ara.xyl oligosac\", usecols=\"A:F\").dropna()\n",
     "add_metabolites(model, metabolites)\n",
     "add_reactions(model, reactions)"
    ]
@@ -259,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
