--- a/notebooks/Step 3 - Manual pathway curation.ipynb
+++ b/notebooks/Step 3 - Manual pathway curation.ipynb
@@ -162,9 +162,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.remove_reactions(['R_HEX1', 'R_XYLI2','R_GLUKA_1','R_MNLDHr'])\n",
+    "model.remove_reactions(['R_HEX1', 'R_XYLI2','R_GLUKA_1','R_MNLDHr', 'R_BG_CELLB', 'R_GLCt2', 'R_BGLA'])\n",
     "model.reactions.R_CEPA.reversible=False\n",
     "model.reactions.R_CEPA.lb=0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "545c92aa-807b-40e3-9d29-198aeb82ecd2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Fix false positive essentiality for xylose isomerase "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c6652d0f-048d-4d90-ba14-0ff05da4bf36",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "p1 = Protein()\n",
+    "p1.genes=['G_WP_015926769_1'] # Ccel_3429 (original xylose isomerase)\n",
+    "p2 = Protein()\n",
+    "p2.genes=['G_WP_012634944_1'] # Ccel_0500 (alternative xylose isomerase)\n",
+    "gpr = GPRAssociation()\n",
+    "gpr.proteins=[p1, p2]\n",
+    "model.set_gpr_association('R_XYLI1', gpr)"
    ]
   },
   {
@@ -177,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "48a29dd9-9ca4-497d-84ba-ec9fade05774",
    "metadata": {},
    "outputs": [],
@@ -187,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6dd4326d-9bd0-4f27-b999-f19df7aab018",
    "metadata": {},
    "outputs": [],
@@ -198,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "b4a07c0f-2ad2-41e9-b68f-a57adbc2a729",
    "metadata": {},
    "outputs": [],
@@ -210,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ef4bb61f-7b9e-4e3f-a8a1-8e3d5fa5cb07",
    "metadata": {},
    "outputs": [],
@@ -221,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "0b6b19e9-0d16-4298-8465-34fb21c2fdb5",
    "metadata": {},
    "outputs": [],
@@ -244,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "c0026bf9-001b-4ba1-a8cd-56ed7005c559",
    "metadata": {},
    "outputs": [],
@@ -272,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "c21dfb4d-07a1-427a-8729-891d45afaf5a",
    "metadata": {},
    "outputs": [],
@@ -291,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "67d76c0c-5b8f-4bcd-8ec2-ae8cb147b9c2",
    "metadata": {},
    "outputs": [],
@@ -316,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
