--- a/notebooks/Step 4 - Calibrate GAM and NGAM.ipynb
+++ b/notebooks/Step 4 - Calibrate GAM and NGAM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "48db7d33",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import pandas as pd\n",
     "from reframed import FBA, Environment, load_cbmodel, save_cbmodel\n",
     "from scipy.optimize import lsq_linear\n",
+    "from scipy.stats import linregress\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "4feaaba7-5c5e-4135-a136-d260d9152d08",
    "metadata": {
     "tags": []
@@ -108,12 +109,13 @@
     "A = np.vstack([mu, np.ones((1,7))]).T\n",
     "b = np.array(max_atp).T\n",
     "opt = lsq_linear(A, b, bounds=[(0, 0), (100, min(max_atp))])\n",
-    "GAM, NGAM = round(opt.x[0], 1), round(opt.x[1], 1)"
+    "GAM, NGAM = round(opt.x[0], 1), round(opt.x[1], 1)\n",
+    "SSE = round(2*opt.cost, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "2e54b3e8-f0fc-4cc0-b980-676bfba84160",
    "metadata": {},
    "outputs": [
@@ -121,17 +123,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GAM:20.8 NGAM: 2.7\n"
+      "GAM:20.8 NGAM: 2.7\n",
+      "SSE: 2.391\n"
      ]
     }
    ],
    "source": [
-    "print(f'GAM:{GAM} NGAM: {NGAM}')"
+    "print(f'GAM:{GAM} NGAM: {NGAM}')\n",
+    "print(f'SSE: {SSE}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "87b0c5f7",
    "metadata": {},
    "outputs": [],
@@ -145,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "ecb01fe6",
    "metadata": {},
    "outputs": [],
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "df32e6b4",
    "metadata": {},
    "outputs": [],
@@ -178,7 +182,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
+   "id": "4219d5e6-18f8-4f3e-bd82-185416a109fd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 = 0.905, p = 0.000982\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = linregress(mu, mu_sim)\n",
+    "print(f'R2 = {res.rvalue**2:.3g}, p = {res.pvalue:.3g}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "54bfd5d1-f825-480e-ab7e-f3b48307bc87",
    "metadata": {
     "tags": []
