--- a/notebooks/tmp.ipynb
+++ b/notebooks/tmp.ipynb
@@ -2,89 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "69cc4a54-61c5-41cc-a30e-84dd54122404",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from reframed import load_cbmodel, Environment, FBA, pFBA\n",
+    "from reframed import load_cbmodel, Environment, FBA, pFBA, ReactionType\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "id": "bce96623-5fc2-48bb-b88f-acb4ce95e85f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_cbmodel('../models/RcH10_final.xml')"
+    "model = load_cbmodel('../models/iFS431 copy.xml', flavor='cobra')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "510ff7a2-01f7-4859-82df-06b057cec3f4",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 68,
+   "id": "c6d06ada-ad75-4529-8e05-b6d88e1f0889",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "752"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "media = pd.read_csv('../input/media_db.tsv',sep='\\t')\n",
-    "media = media.groupby('medium').agg({'compound': set})['compound'].to_dict()"
+    "len(model.metabolites)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "219aa5f6-1cdb-49d5-bfda-3ecfe480c191",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 69,
+   "id": "52a59e3b-7c8a-451f-b8c2-824ccc770d48",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "743"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "env_init=Environment.from_compounds(media['MM_glucose'])\n",
-    "env_init.apply(model, exclusive=True, inplace=True, warning=False)"
+    "len(model.reactions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "d7ba6977-1e6b-4ef7-8c75-41479ab980e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sol = FBA(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "de0f4215-5c9f-417a-9a36-8e30e9bed7a9",
-   "metadata": {},
+   "execution_count": 67,
+   "id": "8ecd147e-9491-4993-840d-5fee4f8c8480",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R_EX_glc__D_e -10\n",
-      "R_EX_h_e     -10\n",
-      "R_EX_no3_e   -7.28634\n",
-      "R_EX_pi_e    -0.578874\n",
-      "R_EX_so4_e   -0.165757\n",
-      "R_EX_k_e     -0.129095\n",
-      "R_EX_d23hb_e  0.248909\n",
-      "R_EX_nh4_e    0.743859\n",
-      "R_EX_h2o_e    5.63925\n",
-      "R_EX_ac_e     10.8642\n",
-      "R_EX_co2_e    12.0082\n"
+      "Metabolites:\n",
+      "c 679\n",
+      "e 73\n",
+      "\n",
+      "Reactions:\n",
+      "enzymatic 0\n",
+      "transport 79\n",
+      "exchange 31\n",
+      "sink 0\n",
+      "other 633\n"
      ]
     }
    ],
    "source": [
-    "sol.show_values(pattern='R_EX', sort=True, abstol=0.1)"
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "9bdf544d-9ef3-44b4-a47c-0fc83da6916a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1093"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "860 + 233"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ed6f552-93dd-446e-9656-3ca6cee20693",
+   "id": "793f17a2-5af3-41fa-95d7-c6d4dd0623b6",
    "metadata": {},
    "outputs": [],
    "source": []
