Changed red writing to black

--- a/notebooks/Step 3 - Manual pathway curation.ipynb
+++ b/notebooks/Step 3 - Manual pathway curation.ipynb
@@ -35,7 +35,7 @@
    "id": "131d770b-3265-4d33-8f58-ec50f7abe80b",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\">**Load universal model**"
+    "**Load universal model**"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "id": "43813c8c-f783-41a6-930a-4e1f8cfb687b",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\">**Changed below because it showed the wrong stoichiometry for the ferredoxin based reactions**</span>"
+    "**Fix stoichiometry for the ferredoxin based reactions**"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "id": "16bf5772-abbf-4d18-bc7e-0d78c6763ed8",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\">**Changing the cofactor stoichiometry to ensure balanced reactions**</span>"
+    "**Changing the cofactor stoichiometry to ensure balanced reactions**"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "id": "232fd250-fb89-4fa8-9a35-f3e156bc940a",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\"> Energy balancing"
+    "### Energy balancing"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "id": "6f325a34-3151-4ee3-a034-be330f7a9971",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\"> Pyruvate exchange"
+    "### Pyruvate exchange"
    ]
   },
   {
@@ -475,7 +475,7 @@
    "id": "baead17b-b503-4cd8-9a2c-c142fabaab36",
    "metadata": {},
    "source": [
-    "### <span style=\"color:red\"> Fixing imbalanced reactions"
+    "### Fixing imbalanced reactions"
    ]
   },
   {
