Final changes to notebook for fixing/removing URIs

--- a/notebooks/Step 5 - Cross- references.ipynb
+++ b/notebooks/Step 5 - Cross- references.ipynb
@@ -1838,31 +1838,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e77df683-1354-4436-8044-2479e0952899",
+   "execution_count": 13,
+   "id": "bc54249b-b071-414d-87ad-c5aa9a2dca9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cobra"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "134cd761-d4d5-426e-9722-31c31e39a16f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_cobra = cobra.io.read_sbml_model(\"../models/RcH10_final.xml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b94c7342-f5a2-43cd-b087-4d3fb37a8646",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "model_cobra = cobra.io.read_sbml_model(\"../models/RcH10_final.xml\")\n",
+    "\n",
     "cobra.io.write_sbml_model(model_cobra,\"../models/iIB728.xml\")"
    ]
   },
