--- a/notebooks/Step 3 - Manual pathway curation.ipynb
+++ b/notebooks/Step 3 - Manual pathway curation.ipynb
@@ -377,7 +377,7 @@
     "model.remove_reaction(\"R_ALDD2y\")\n",
     "model.reactions.R_ACALD.ub=0\n",
     "\n",
-    "model.remove_reaction(\"R_ACt2r_1\") ## Replaced this reactions because it doesn't have any genetic evidence and is far less common than ACt2r http://bigg.ucsd.edu/universal/reactions/ACt2r_1\n",
+    "model.remove_reaction(\"R_ACt2r_1\") \n",
     "model.add_reaction(deepcopy(model_uni.reactions.R_ACt2r))\n",
     "model.reactions.R_ACt2r.reversible=True\n",
     "model.reactions.R_ACt2r.lb=-1000"
