Implementing changes from reviewer's requests

--- a/notebooks/Step 3 - Manual pathway curation.ipynb
+++ b/notebooks/Step 3 - Manual pathway curation.ipynb
@@ -131,6 +131,20 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "4ec9ff86-6be9-40d0-bae2-fac35bf37c2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.reactions.R_GLCabc.stoichiometry[\"M_atp_c\"]=-2.0\n",
+    "model.reactions.R_GLCabc.stoichiometry[\"M_h2o_c\"]=-2.0\n",
+    "model.reactions.R_GLCabc.stoichiometry[\"M_adp_c\"]=2.0\n",
+    "model.reactions.R_GLCabc.stoichiometry[\"M_h_c\"]=2.0\n",
+    "model.reactions.R_GLCabc.stoichiometry[\"M_pi_c\"]=2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "6551a67d-005a-491a-a878-86a34b10bfe3",
    "metadata": {},
    "outputs": [],
@@ -147,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "cae31a38-3b66-4205-a06c-5f7ee690f6b4",
    "metadata": {},
    "outputs": [],
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "bb0ac5b2-4dfd-472e-88a2-1a99c7766b1a",
    "metadata": {},
    "outputs": [],
@@ -181,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c40fdbc2-6e99-4863-a688-17043e7bbeb2",
    "metadata": {},
    "outputs": [],
@@ -198,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "63380119-6d05-40d8-bd5b-ad1cadc68416",
    "metadata": {},
    "outputs": [],
@@ -218,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f396c815-9cf7-40c0-b65f-7f9d9905194f",
    "metadata": {},
    "outputs": [],
@@ -240,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c6652d0f-048d-4d90-ba14-0ff05da4bf36",
    "metadata": {
     "tags": []
@@ -266,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ce279ed5-9fbb-4251-8f0d-bc42b81c2dce",
    "metadata": {},
    "outputs": [],
@@ -301,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c0026bf9-001b-4ba1-a8cd-56ed7005c559",
    "metadata": {},
    "outputs": [],
@@ -329,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ec71e9ea-1d1a-4684-b010-5c09a9b99d23",
    "metadata": {},
    "outputs": [],
@@ -365,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "67943f03-da80-4aac-b67f-36c0b9b69043",
    "metadata": {},
    "outputs": [],
@@ -393,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "9351da83-6860-47c1-a190-444d4c3fa5f6",
    "metadata": {},
    "outputs": [],
@@ -406,6 +420,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "14a00d23-b56c-4627-9700-c45473aed8ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.reactions.R_LACLt2.stoichiometry[\"M_h_e\"]=-1\n",
+    "model.reactions.R_LACLt2.stoichiometry[\"M_h_c\"]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ba0d94bf-1628-4ada-bad7-c5efdef87c38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R_LACLt2: M_lac__L_e + M_h_e <-> M_lac__L_c + M_h_c"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.R_LACLt2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "91520937-ed72-47c0-b5d6-7e11d600a6d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "R_L_LACt3: M_h_e + M_lac__L_c --> M_h_c + M_lac__L_e"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.reactions.R_L_LACt3"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f2134257-6029-415c-bc07-f8df16e55879",
    "metadata": {},
@@ -415,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "cf39b6f0-ee91-41db-a05d-e83491926ab1",
    "metadata": {},
    "outputs": [],
@@ -425,15 +492,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff173a41-6bb9-437c-b900-21b1613cbd70",
+   "id": "78b1530f-623f-4c96-9b47-6071ec1c9877",
    "metadata": {},
    "source": [
-    "## Remove blocked reactions and orphaned genes"
+    "### Remove incorrectly annotated reactions causing inconsistencies\n",
+    "\n",
+    "Carboxymycobactin-Fe3-loading/unloading. Associated gene Ccel_1248 is annotated as ABC transporter related in uniprot. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
+   "id": "db5f510d-c78b-49d1-9196-ed3defaa3b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.remove_reactions([\"R_CMCBTFU\",\"R_CMCBTFL\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff173a41-6bb9-437c-b900-21b1613cbd70",
+   "metadata": {},
+   "source": [
+    "### Remove blocked reactions and orphaned genes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "e94608e8-89e4-4eba-8317-02b0abcdde27",
    "metadata": {},
    "outputs": [],
@@ -443,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "c21dfb4d-07a1-427a-8729-891d45afaf5a",
    "metadata": {},
    "outputs": [],
@@ -455,14 +542,16 @@
   {
    "cell_type": "markdown",
    "id": "90dafe74-cf5c-4cad-bffe-3b86f8551f8a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Save model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "67d76c0c-5b8f-4bcd-8ec2-ae8cb147b9c2",
    "metadata": {},
    "outputs": [],
@@ -480,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "e1561560-7dbd-4079-ba32-e365bfdca900",
    "metadata": {
     "tags": []
@@ -491,23 +580,15 @@
      "output_type": "stream",
      "text": [
       "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2025-03-14\n",
-      "Number of imbalanced reactions before: 320\n",
-      "Number of imbalanced reactions now: 190\n"
+      "Academic license - for non-commercial use only - expires 2026-03-27\n",
+      "Number of imbalanced reactions before: 318\n",
+      "Number of imbalanced reactions now: 188\n"
      ]
     }
    ],
    "source": [
     "%run ../scripts/fixing_mass_imbalances.py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ba2e7e0-4b84-4cfe-a124-487dfe5032d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
