Changes after review

--- a/notebooks/Step 3 - Manual pathway curation.ipynb
+++ b/notebooks/Step 3 - Manual pathway curation.ipynb
@@ -293,6 +293,8 @@
     "model.add_reaction_from_str('R_GALabc: M_atp_c + M_gal_e + M_h2o_c <-> M_adp_c + M_gal_c + M_h_c + M_pi_c')\n",
     "gpr = deepcopy(model.reactions.R_GALabcpp.gpr)\n",
     "model.set_gpr_association('R_GALabc', gpr)\n",
+    "model.reactions.R_GALabc.lb=0\n",
+    "model.reactions.R_GALabc.reversible=False\n",
     "\n",
     "pts_rxns = [rxn for rxn in [rxn for rxn in model.reactions if rxn.endswith('pts')]]\n",
     "model.remove_reactions(pts_rxns)\n",
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "e94608e8-89e4-4eba-8317-02b0abcdde27",
    "metadata": {},
    "outputs": [],
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "c21dfb4d-07a1-427a-8729-891d45afaf5a",
    "metadata": {},
    "outputs": [],
@@ -551,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "67d76c0c-5b8f-4bcd-8ec2-ae8cb147b9c2",
    "metadata": {},
    "outputs": [],
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "e1561560-7dbd-4079-ba32-e365bfdca900",
    "metadata": {
     "tags": []
